Fix navbar dropdown content(z-index) (#59)

--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -51,6 +51,7 @@ $beige-border: 1px solid rgb(216, 209, 186);
   border-left: $beige-border;
   padding: 10px;
   background-color: white;
+  z-index: 1;
   ul {
     margin: 0px;
     padding: 0px;
